# videosubfinder-cli

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-cpu-linux-x64.yml  build-cpu-static-linux-x64.yml  build-cuda-linux-x64.yml  build-darwin-x64.yml
Components/CUDAKernels/: CMakeLists.txt  CUDAKernels.vcxproj  cuda_kernels.cu  cuda_kernels.h
Components/CUDAKernels/kmeans/: cuda_kmeans.cu  kmeans.h
Components/DSVideo/: DSVideo.cpp  DSVideo.h  DSVideo.vcproj  DSVideo.vcxproj  DSVideo.vcxproj.filters  DSVideoLoader.cpp  DSVideoLoader.h  stdafx.cpp
Components/FFMPEGVideo/: CMakeLists.txt  FFMPEGVideo.cpp  FFMPEGVideo.h  FFMPEGVideo.vcxproj  FFMPEGVideo.vcxproj.filters  FFMPEGVideoLoader.cpp  FFMPEGVideoLoader.h
Components/IPAlgorithms/: CMakeLists.txt  IPAlgorithms.cpp  IPAlgorithms.h  IPAlgorithms.vcproj  IPAlgorithms.vcxproj  IPAlgorithms.vcxproj.filters  MyClosedFigure.cpp  MyClosedFigure.h  SSAlgorithms.cpp  SSAlgorithms.h
Components/Include/: DataTypes.h  Video.h  __pstl_config_site  wx.h
Components/Include/pstl/internal/: pstl_config.h
Components/OCVVideo/: CMakeLists.txt  OCVVideo.cpp  OCVVideo.h  OCVVideo.vcxproj  OCVVideo.vcxproj.filters  OCVVideoLoader.cpp  OCVVideoLoader.h  stdafx.cpp  stdafx.h
Docs/: BuildWithVS2008.txt  BuildWithVS2013.txt  BuildWithVS2017.txt  BuildWithVS2019.txt  build.txt  readme_chn.txt  readme_eng.txt  readme_rus(old).txt  readme_rus.txt
Interfaces/VideoSubFinderCli/: CMakeLists.txt  VideoSubFinderCli.cpp  VideoSubFinderCli.h
Interfaces/VideoSubFinderWXW/: BitmapButton.cpp  BitmapButton.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  Choice.cpp  Choice.h  CommonFunctions.cpp  CommonFunctions.h  Control.h  DataGrid.cpp  DataGrid.h  ImageBox.cpp  ImageBox.h  MainFrm.cpp  MainFrm.h  MyResource.h  OCRPanel.cpp  OCRPanel.h  ResizableWindow.cpp  ResizableWindow.h  SSOWnd.cpp  SSOWnd.h  ScrollBar.cpp  ScrollBar.h  SearchPanel.cpp  SearchPanel.h  SeparatingLine.cpp  SeparatingLine.h  SettingsPanel.cpp  SettingsPanel.h  StaticBox.cpp  StaticBox.h  StaticText.cpp  StaticText.h  TextBox.cpp  TextBox.h  TextCtrl.cpp  (+14 more)
Settings/: general.cfg
Settings/Localization/chn/: locale.cfg
Settings/Localization/eng/: locale.cfg
Settings/Localization/rus/: locale.cfg
Settings/x86/: general.cfg
docker/: build.Dockerfile  build.sh  build_all.sh  build_cuda.Dockerfile  build_cuda.sh  run_cuda.Dockerfile
